--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.0.1
 gunicorn==19.9.0
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2>=3.0
 MarkupSafe==1.1.1
 #Werkzeug==0.15.5
 scikit-learn==0.24.2
