--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ Flask==2.0.1
 gunicorn==19.9.0
 itsdangerous==2.0
 Jinja2>=3.0
-MarkupSafe==1.1.1
+MarkupSafe>=2.0
 #Werkzeug==0.15.5
 scikit-learn==0.24.2
-xgboost==1.4.2
 joblib==0.16.0
