--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ itsdangerous==2.0
 Jinja2>=3.0
 MarkupSafe>=2.0
 #Werkzeug==0.15.5
-scikit-learn==0.24.2
-joblib==0.16.0
+#scikit-learn==0.24.2
+#joblib==0.16.0
 numpy==1.19.3
 Pillow==8.4.0
 tensorflow==2.6.0
